Fix double border

--- a/client/web/src/repo/RepoRevisionContainer.scss
+++ b/client/web/src/repo/RepoRevisionContainer.scss
@@ -51,17 +51,14 @@
 
         .theme-redesign & {
             background-color: var(--code-bg);
-            border-top-left-radius: var(--border-radius);
-            border-top-right-radius: var(--border-radius);
-            border: 1px solid var(--border-color-2);
 
             // Add border to repo revision container content
             // but enable variable margin-bottom (by setting it on child div)
             // without having to repeat border styles.
             > div:first-of-type {
-                border: 1px solid var(--border-color);
-                border-top-left-radius: 0.1875rem;
-                border-top-right-radius: 0.1875rem;
+                border: 1px solid var(--border-color-2);
+                border-top-left-radius: var(--border-radius);
+                border-top-right-radius: var(--border-radius);
             }
         }
     }
